updated code to current standard

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h2>(and other fruit products)</h2>
 
     <button onclick="fb_authenticate()">Login with Google</button>
+    <button onclick="email_view()">Open Email</button>
 
     <form id="fruitForm">
       <label for="name">Your Name:</label>
@@ -28,6 +29,8 @@
     </form>
 
     <button onclick="fb_write()">Submit</button>
+
+    <div id="emailOutput" style="margin-top: 2rem;"></div>
 
     <p id="statusMessage"></p>
   </div>
