--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Sal’s Strawberry Saloon</title>
   <link rel="stylesheet" href="style.css" />
   <script type="module" src="./main.mjs"></script>
+    <link rel="icon" type="image/png" href="strawberry.png">
+
 </head>
 <body>
   <div class="container">
