--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Sal’s Strawberry Saloon</title>
   <link rel="stylesheet" href="style.css" />
   <script type="module" src="./main.mjs"></script>
-    <link rel="icon" type="image/png" href="strawberry.png">
+    <link rel="icon" type="image/png" href="Strawberry.png">
 
 </head>
 <body>
